# SyncTalk_2D

./: .gitignore  AGENTS.md  ANALYSIS.md  Dockerfile  docker-compose.yml  pyproject.toml  synctalk.db
docs/: ARCHITECTURE.md  PRODUCT_PLAN.md
synctalk/: __init__.py  cli.py  sdk.py
synctalk/api/: app.py  middleware.py  schemas.py
synctalk/auth/: __init__.py  client.py
synctalk/configs/: __init__.py  base.py
synctalk/configs/presets/: 160.yaml  328.yaml
synctalk/data/: __init__.py  audio.py  augmentation.py  dataset.py  face_detection.py  landmark.py  preprocessing.py
synctalk/gui/: __init__.py  app.py  live_view.py  login_view.py  styles.py  train_view.py
synctalk/inference/: engine.py
synctalk/models/: __init__.py  audio_encoder.py  blocks.py  export.py  syncnet.py  unet.py
synctalk/realtime/: __init__.py  audio_stream.py  character.py  pipeline.py  virtual_camera.py
synctalk/server/: app.py  auth.py  database.py
synctalk/training/: __init__.py  losses.py  metrics.py  trainer.py
synctalk/tts/: __init__.py  base.py  edge_tts_engine.py  file_engine.py
synctalk/utils/: __init__.py  device.py  io.py  logging.py
tests/: test_api.py  test_audio.py  test_augmentation.py  test_configs.py  test_export.py  test_metrics.py  test_middleware.py  test_models.py  test_realtime.py  test_sdk.py  test_utils.py
